--- a/Projeto 2/styles/footer.css
+++ b/Projeto 2/styles/footer.css
@@ -2,10 +2,21 @@ footer {
   display: flex;
   gap: 24px;
   padding-bottom: 24px;
+  justify-content: center;
+
+  flex-wrap: wrap;
 
   font: 14px/150% var(--font-family);
 }
 
 footer span:nth-child(1) {
-  margin-right: auto;
+  width: 100%;
+  text-align: center;
+}
+
+@media (width >= 768px) {
+  footer span:nth-child(1) {
+    width: auto;
+    margin-right: auto;
+  }
 }
