--- a/Projeto 3/styles/section.css
+++ b/Projeto 3/styles/section.css
@@ -23,6 +23,24 @@ section header {
 #featured {
   grid-area: featured;
 
+  @media (width <= 968px) {
+    display: flex;
+    flex-direction: column;
+
+    & > div {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .card {
+      max-width: 100%;
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+
   img {
     height: 100%;
     object-fit: cover;
@@ -44,7 +62,7 @@ section header {
     figcaption {
       position: absolute;
       bottom: 0;
-      
+
       padding: 24px;
 
       &:has(.text-lg) {
@@ -60,9 +78,21 @@ section header {
 
 #weekly {
   grid-area: weekly;
-  
-  &>div {
+
+  & > div {
     grid-template-columns: repeat(4, 292px);
+  }
+
+  @media (width <= 1240px) {
+    & > div {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+
+      & figure {
+        max-width: 292px;
+      }
+    }
   }
 
   img {
@@ -97,6 +127,18 @@ section header {
   h3 {
     margin-block: 8px 4px;
   }
+
+  @media (width <= 1024px) {
+    & > div article {
+      display: flex;
+      flex-direction: row-reverse;
+
+      & img {
+        object-fit: cover;
+        min-width: 80px;
+      }
+    }
+  }
 }
 
 aside {
@@ -109,7 +151,7 @@ aside {
   h3 {
     margin-bottom: 8px;
   }
-  
+
   img {
     width: 72px;
     aspect-ratio: 1/1;
